--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -41,23 +41,6 @@
 </style>
 
 <body>
-<nav class="navbar navbar-static-top">
-	<div class="container">
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-	</div>
-	<div id="navbar" class="collapse navbar-right navbar-collapse">
-		<ul class="nav navbar-nav ">
-			<li><a href="index.html">Back to login</a></li>
-		</ul>
-	</div>		<!-- end nav-collapse -->
-</div>		<!-- end navbar -->
-</nav>
 
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
@@ -178,7 +161,7 @@
             
             <!-- Ect questions-->
             <a name="etc"></a>
-			<h3 class="help-header">Ect &nbsp;  <span class="fa fa-shower fa-fw fa-1x i-ltblue help-small-sq" ></span></h1>
+			<h3 class="help-header">Etc &nbsp;  <span class="fa fa-shower fa-fw fa-1x i-ltblue help-small-sq" ></span></h1>
 			<p>
 				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
 			</p>
