We're GeoGem now!

--- a/app/views/login_session/logout.html.erb
+++ b/app/views/login_session/logout.html.erb
@@ -3,7 +3,7 @@
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">	
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>Logged Out<small> - thank you for using Dinner Out</small></h2><!-- Dynamically fills in with school id -->
+				<h2>Logged Out<small> - thank you for using GeoGem</small></h2><!-- Dynamically fills in with school id -->
 			</div>
 			<div class="col-xs-1 center-block">
 				
