--- a/app/views/layouts/_navbar1.html.erb
+++ b/app/views/layouts/_navbar1.html.erb
@@ -9,7 +9,7 @@
 					<span class="icon-bar"></span>
 				</button>
 			<!--<a class="navbar-brand" href="">Dinner Out</a>-->
-			<%= link_to home_path, class: "navbar-brand" do%><span class="fa fa-home fa-fw"></span>Dinner Out<% end %>
+			<%= link_to home_path, class: "navbar-brand" do%><span class="fa fa-home fa-fw"></span>GeoGem<% end %>
 			</div>
 			<div id="navbar" class="collapse navbar-right navbar-collapse">
 				<ul class="nav navbar-nav ">
