--- a/app/views/login_session/new.html.erb
+++ b/app/views/login_session/new.html.erb
@@ -4,7 +4,7 @@
 	<div class="row login-row">
 		<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4 well login-col">
 
-    	<h1 class="login-header-text">Dinner Out V0.2</h1>
+    	<h1 class="login-header-text">GeoGem</h1>
 			<br>
 			
 			<!--                Login Area                  -->
