--- a/app/views/layouts/_profile_teacher_version.html.erb
+++ b/app/views/layouts/_profile_teacher_version.html.erb
@@ -106,7 +106,7 @@
 	  <% end %>
 	</div>
 	<div class="col-sm-1 col-sm-offset-1"> 
-		<%= link_to "Cancel", teachers_path, :class => "btn btn-danger" %>
+		<%= link_to "Cancel", home_path, :class => "btn btn-danger" %>
 	</div>
 </div>
 <% end %>
