--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -25,7 +25,7 @@
 			<th class="col-xs-1">Icon</th>
 			<th>ID</th>
 			<th>Name</th>
-			<th>Admin</th>
+			<th>Powers</th>
 			<th>Last Login</th>
 		</tr>
 	</thead>
