--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -13,8 +13,9 @@
 <div class="row first-content-row">
 	<div class="col-xs-3">
 		<p><%= notice %></p>
-		<%= button_to "New Teacher", new_teacher_path,
-    :class => "col-sm-offset-1 btn btn-lg btn-success", :method => :get %>
+		<%= button_to new_teacher_path, method: :get, class: 'col-sm-offset-1 btn btn-lg btn-success' do %>
+  		<i class="fa fa-plus-square-o"></i> New Teacher
+		<% end %>
 	</div><!-- End col-->
 </div><!-- End row -->
 
