--- a/app/views/schools/_schoolSelect.html.erb
+++ b/app/views/schools/_schoolSelect.html.erb
@@ -1,25 +1,17 @@
 <!-- UX Team. Edited by Robert Herrera -->
-<!-- dont use form partial unless submit button is styled. -->
-<%= form_for(@current_teacher, :url => {:action => "updateFocus"}) do |f| %>
-
-
+<%= form_for(@teacher) do |f| %>
 		<div class="row vertical-align">
 			<div class="form-group">
 				<label class="control-label col-xs-5" for="selectSch">Super focus school:</label>
 					<div class="col-xs-7">
-						<select class="form-control" id="selectSch">
-                           	<% @schools.each do |school| %>
-                           	<option value="<%= school.id %>"><%= school.full_name %></option>
-                           	 <% end %>
-                        </select> 
+						<%= f.select :school_id, @schools.map{|c| [c.full_name, c.id]}, class: 'form-control'%>
 					</div>   <!-- col-->
-					  <div class="row action-buttons-row">
-	  						<div class="col-xs-6 col-xs-offset-1 text-center"> 
-       						 <%= f.submit "Submit", class: "btn btn-success"%>
-  			  			</div>
- 						 </div>
-  
 	  		</div>   <!-- form group-->
 		</div>   <!-- row -->
-<% end %>
 
+  <div class="actions">
+	  <%= button_tag(type: 'submit', class: "btn btn-success") do %>  
+	  	Change Focus School
+	  <% end %>
+  </div>
+<% end %>
