--- a/app/views/graph/todo.html.erb
+++ b/app/views/graph/todo.html.erb
@@ -5,12 +5,12 @@
 <p><s>migrate code from test application</s></p>
 <p><s>confirm graphs work</s></p>
 <p><s>confirm heroku works</s></p>
-<p>tests</p>
-<p>code sample data</p>
-<p>example page</p>
+<p><s>3</s>5 tests</p>
+<p><s>code sample data</s></p>
+<p>expand example page</p>
 <p>revert /config/routes.rb and /app/controllers/application_controller.rb before merge w/ master</p>
 <p>create postgresql branch, confirm graphs and heroku still work</p>
-<p>implement group_by_date or find alternative</p>
+<p><s>implement group_by_date or find alternative</s></p>
 <p>investigate asynchronous loading</p>
 
 <h1>models</h1>
