Add suspended column to Teacher

--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -41,6 +41,12 @@
 	    		<span class="student-icon-text">Student Roster</span>
 				<% end %></p>
 		</div>
+		<div class="col-xs-2 col-xs-offset-1 text-center" title="Edit teacher login settings">
+			<div class ="action-sq i-gray center-block">
+				<!--<a href="teacher6.html">--><span class="fa fa-gear fa-4x student-icon"></span><!--</a>-->
+			</div>
+			<p><!--<a href="teacher6.html">--><span class="student-icon-text">Login Settings</span><!--</a>--></p>
+		</div>
 	<% end %>
 	
 	<!--If the teacher viewing the page 'owns' the page, show them this option-->
