--- a/app/views/layouts/_profile_admin_version.html.erb
+++ b/app/views/layouts/_profile_admin_version.html.erb
@@ -32,7 +32,7 @@
 <div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Teacher ID: </h4></div>
 	<div class="col-xs-4 col-xs-offset-1">
-		<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
+		<%= f.text_field :screen_name, class: 'form-control'%>
 	</div>
 </div>  
 
