Analysis is dynamic

--- a/app/views/students/analysis.html.erb
+++ b/app/views/students/analysis.html.erb
@@ -4,7 +4,7 @@
             <!--page header -->
             <div class="page-header vertical-align">
                 <div class="col-xs-11">
-                    <h2>Analysis <small> -Reports for student_id </small></h2><!--Dynamically fills in with school id -->
+                    <h2>Analysis <small> Reports for <%= @student.full_name %> </small></h2><!--Dynamically fills in with school id -->
                 </div>
                 <div class="col-xs-1 center-block">
                     <div class="header-sq i-gray" title="Analysis">
