--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,49 +1,49 @@
 <!-- Help page by Steven Young -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--	<meta charset="utf-8">-->
+<!--	<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+<!--	<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
 	<!-- 1. Meta tags: The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Operation Dinner Out</title>
-	<meta name="description" content="Capstone 2017 project">
+<!--	<title>Operation Dinner Out</title>-->
+<!--	<meta name="description" content="Capstone 2017 project">-->
 
 	<!-- 2. Bootstrap CSS: From CDN www.bootstrapcdn.com -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!--	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 
 	<!-- 3. Favicon + my CSS: these are optional -->
-	<link rel="icon" href="../favicon.ico">
+<!--	<link rel="icon" href="../favicon.ico">-->
 	<!--<link href="style.css" rel="stylesheet">-->
-	<link href="../css/general.css" rel="stylesheet">
-	<link href="../css/home.css" rel="stylesheet">
-    <link href="../css/login.css" rel="stylesheet">
-	<script src="https://use.fontawesome.com/6ac119a099.js"></script>	
+<!--	<link href="../css/general.css" rel="stylesheet">-->
+<!--	<link href="../css/home.css" rel="stylesheet">-->
+<!--    <link href="../css/login.css" rel="stylesheet">-->
+<!--	<script src="https://use.fontawesome.com/6ac119a099.js"></script>	-->
 	
 	<!-- 4. Old Explorer support: HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
+<!--		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
+<!--		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>--> 
+<!--	<![endif]-->
+<!--</head>-->
 <!-- This section  needs to go into the css file -->
-<style><!-- This section  needs to go into the css file -->
+<!--<style><!-- This section  needs to go into the css file -->
 
-.help-header { padding-top: 60px; padding-bottom: 20px; }
-.help-qa-letter { font-size: 1.2em; font-weight: bold; color: gray; }
-.help-line { width: 90%; border-top: 1px dotted lightgray; padding-bottom: 20px; }
-.help-small-sq { border-radius: 6px; color: white; }
-.help-answer-para { margin-left: 5%; margin-right: 5%; }
+<!--.help-header { padding-top: 60px; padding-bottom: 20px; }-->
+<!--.help-qa-letter { font-size: 1.2em; font-weight: bold; color: gray; }-->
+<!--.help-line { width: 90%; border-top: 1px dotted lightgray; padding-bottom: 20px; }-->
+<!--.help-small-sq { border-radius: 6px; color: white; }-->
+<!--.help-answer-para { margin-left: 5%; margin-right: 5%; }-->
 
-</style>
+<!--</style>-->
 
-<body>
+<!--<body>-->
 
-<div class="container">
-	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
+<!--<div class="container">-->
+<!--	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">-->
 
 		<!-- page header -->
 		<div class="page-header vertical-align">
@@ -114,7 +114,7 @@
 			<p class="help-answer-para">
 				<span class="help-qa-letter">A:</span> Dinner out is a web application that collects and analyzes behavioral data for students with autism.<br>
 				The program was created by computer science students at <a href="http://www.noctrl.edu">North Central College</a>. 
-				You can read more at the <a href="about">About page</a>.
+				You can read more at the <%= link_to "About", about1_path %>.
 			</p>
 			
 			<hr class="help-line">
@@ -138,7 +138,7 @@
 			<a name="sessions"></a>
 			<h3 class="help-header">Sessions &nbsp;  <span class="fa fa-key fa-fw fa-1x i-red help-small-sq" ></span></h1>
 			<p>
-				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
+				<span class="help-qa-letter">Q1:</span> Are these question numbers working? Is 20 questions too goofy?
 			</p>
 			<p class="help-answer-para">
 				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
@@ -150,7 +150,7 @@
             <a name="admin-powers"></a>
 			<h3 class="help-header">Admin Powers &nbsp;  <span class="fa fa-trophy fa-fw fa-1x i-yellow help-small-sq" ></span></h1>
 			<p>
-				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
+				<span class="help-qa-letter">Q1:</span> Are these question numbers working? Is 20 questions too goofy?
 			</p>
 			<p class="help-answer-para">
 				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
@@ -163,7 +163,7 @@
             <a name="etc"></a>
 			<h3 class="help-header">Etc &nbsp;  <span class="fa fa-shower fa-fw fa-1x i-ltblue help-small-sq" ></span></h1>
 			<p>
-				<span class="help-qa-letter">Q3:</span> Are these question numbers working? Is 20 questions too goofy?
+				<span class="help-qa-letter">Q1:</span> Are these question numbers working? Is 20 questions too goofy?
 			</p>
 			<p class="help-answer-para">
 				<span class="help-qa-letter">A:</span> We shall see. It does make help at least <i>a little</i> more fun.<br>
