--- a/app/views/layouts/_profile_teacher_version.html.erb
+++ b/app/views/layouts/_profile_teacher_version.html.erb
@@ -68,7 +68,7 @@
 		
 		<!--A roundabout way of making ltblue display as light blue.-->
 		<% if @teacher.color == 'ltblue' %>
-			<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
+			<%= f.select :color, options_for_select(colorNames, :selected => 'red'), 
 			class: 'form-control' %>
 		<% end %>
 		
@@ -76,6 +76,7 @@
 		<% if @teacher.color != 'ltblue' %>
 			<%= f.select :color, colorNames, class: 'form-control' %>
 		<% end %>
+		
 	</div>
 </div>
 
