Made small error with light blue and ltblue and now fixed it

--- a/app/views/layouts/_profile_admin_version.html.erb
+++ b/app/views/layouts/_profile_admin_version.html.erb
@@ -61,7 +61,7 @@
 		
 		<!--A roundabout way of making ltblue display as light blue.-->
 		<% if @teacher.color == 'ltblue' %>
-			<%= f.select :color, options_for_select(colorNames, :selected => 'red'), 
+			<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
 			class: 'form-control' %>
 		<% end %>
 		
