--- a/app/views/layouts/_profile_teacher_version.html.erb
+++ b/app/views/layouts/_profile_teacher_version.html.erb
@@ -68,13 +68,13 @@
 		
 		<!--A roundabout way of making ltblue display as light blue.-->
 		<% if @teacher.color == 'ltblue' %>
-			<%= f.select :color, options_for_select(colorNames, :selected => 'light blue'), 
+			<%= f.select :color, options_for_select(colorNames.map {|color| [color.titleize, color]}, :selected => 'light blue'), 
 			class: 'form-control' %>
 		<% end %>
 		
 		<!--Otherwise, the value is drawn naturally from the model entry. -->
 		<% if @teacher.color != 'ltblue' %>
-			<%= f.select :color, colorNames, class: 'form-control' %>
+			<%= f.select :color, colorNames.map {|color| [color.titleize, color]}, class: 'form-control' %>
 		<% end %>
 		
 	</div>
@@ -84,7 +84,7 @@
 <div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
 	<div class="col-xs-4 col-xs-offset-1">
-		<%= f.select :icon, teacherIcons, class: 'form-control' %>
+		<%= f.select :icon, teacherIcons.map {|icon| [icon.titleize, icon]}, class: 'form-control' %>
 	</div>
 </div>
 
