--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -51,7 +51,7 @@
 	
 	<div class="row action-buttons-row">
 		<div class="col-sm-1 col-sm-offset-1"> 
-			<%= button_tag(type: 'submit', class: "btn btn-success") do %>  Update Password <%end%>
+			<%= button_tag(type: 'submit', class: "btn btn-success") do %>Change Password <%end%>
 		</div>
 		<div class="col-sm-1 col-sm-offset-1"> 
 			<%= link_to "Cancel", teachers_path, :class => "btn btn-danger" %>
