--- a/app/views/teachers/login_settings.html.erb
+++ b/app/views/teachers/login_settings.html.erb
@@ -1,22 +1,19 @@
 <div class="page-header cap17-header vertical-align">
 	<div class="col-xs-11">
-		<h2>Login Settings<small> - edit login settings for Teacher EddieZ</small></h2>
+		<h2>Login Settings<small> - edit login settings for Teacher <%= @teacher.user_name %></small></h2>
 	</div>
-	<div class="col-xs-1">
-		<div class="header-sq i-plum" title="Bianca17">
-			<span class="fa fa-apple fa-3x teacher-icon "></span>
-		</div>
-	</div>
+	<%= render 'layouts/current_teacher_icon' %>
 </div>
 
 	<!--Edit Login Settings form -->
-	<form class="form-horizontal" action="teacher2.html">
+<%= form_for(@teacher) do |f| %>
+	<form class="form-horizontal">
 
 	 	<!-- Teacher ID -->
 	 	<div class="row form-row">
 			<div class="col-xs-2 col-xs-offset-1"><h4> Teacher ID: </h4></div>
 			<div class="col-xs-2">
-				<input type="id" class="form-control" id="teacherID" placeholder="EddieZ">
+				<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
 			</div>
 		</div>
 	
@@ -24,7 +21,7 @@
 		<div class="row form-row">
    		<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
    			<div class="col-xs-4 col-xs-offset-1">
-				<input type="name" class="form-control" id="teacherName" placeholder="Edward Z. Jones">
+				<%= f.text_field :full_name, class: 'form-control', id: 'teacherID' %>
 			</div>
 		</div>   <!-- row -->
 
@@ -37,14 +34,12 @@
 		<div class="row form-row">
 			<div class="col-xs-2 col-xs-offset-1"><h4>Teacher powers: </h4></div>
 			<div class="col-xs-4">
-				<select name="colors">
-					<option value="Cyan">Admin</option>
-					<option value="Blue">Teacher</option>
-					<option value="Red">SessionOnly</option>
-				</select>
+				<%= f.select :powers, ["SessionOnly", "Teacher", "Admin"], 
+			class: 'form-control'%>
 			</div>
  		</div>
 
+<!-- IS NOT IMPLEMENTED -->
 		<!-- Teacher login suspended? -->
 		<div class="row form-row">
 			<div class="col-xs-2 col-xs-offset-1"><h4>Login status: </h4></div>
@@ -52,31 +47,36 @@
 				<label><input type="checkbox" checked="checked">Suspended</label>
 			</div>
 		</div>
+<!-- ------------------ -->
 
 		<!-- OK, Cancel buttons -->
 		<div class="row "> 
 			<div class="col-xs-4 col-xs-offset-2 text-center">
-				<button type="submit" class="btn btn-success">Change Settings</button>
+				<%= button_tag(type: 'submit', class: "btn btn-success") do %>  
+	  			Change Settings 
+	  		<% end %>
 				&nbsp; &nbsp; &nbsp;
-				<button type="submit" class="btn btn-danger">Cancel</button>
+				<%= link_to 'Cancel', edit_teacher_path, :class => "btn btn-danger" %>
 			</div>
 		</div>
 	</form>   <!-- settings form -->
+<% end %>
 
 
-	<!-- a little extra space after name/email -->
-	<div class="form-spacer">	&nbsp;</div>
-	<hr width="80%">
-	<div class="form-spacer">	&nbsp;</div>
+<!-- a little extra space after name/email -->
+<div class="form-spacer">	&nbsp;</div>
+<hr width="80%">
+<div class="form-spacer">	&nbsp;</div>
 
-	<!-- Change Password form -->
-	<form class="form-horizontal" action="teacher2.html">
+<!-- Change Password form -->
+<%= form_for(@teacher) do |f| %>
+	<form class="form-horizontal">
 		
 		<!-- new password -->
 	  <div class="row form-row">
 		  <label class="control-label col-sm-3" for="newPass"><h4>New Password:</h4></label>
 			<div class="col-sm-4"> 
-			  <input type="password" class="form-control" id="newPass">
+			  <%= f.password_field :password, class: 'form-control', id: 'newPass' %>
 			</div>
 	  </div>
 		
@@ -84,19 +84,20 @@
 	  <div class="row form-row">
 		  <label class="control-label col-sm-3" for="confPass"><h4>Confirm New Password:</h4></label>
 			<div class="col-sm-4"> 
-			  <input type="password" class="form-control" id="confPass">
+			  <%= f.password_field :password_confirmation, class: 'form-control', id: 'confPass' %>
 			</div>
 	  </div>
 		
 		<!-- OK, Cancel buttons -->
 		<div class="row "> 
 			<div class="col-xs-4 col-xs-offset-2 text-center">
-				<button type="submit" class="btn btn-success">Change Password</button>
+				<%= button_tag(type: 'submit', class: "btn btn-success") do %>Change Password <%end%>
 				&nbsp; &nbsp; &nbsp;
-				<button type="submit" class="btn btn-danger">Cancel</button>
+				<%= link_to "Cancel", edit_teacher_path, :class => "btn btn-danger" %>
 			</div>
 		</div>
-	</form>   <!-- change password form-->
+	</form>
+	<% end %> <!-- change password form-->
 
 	</div>   <!-- col -->
 </div><!--End row-->
