--- a/app/views/teachers/login_settings.html.erb
+++ b/app/views/teachers/login_settings.html.erb
@@ -39,15 +39,16 @@
 			</div>
  		</div>
 
-<!-- IS NOT IMPLEMENTED -->
 		<!-- Teacher login suspended? -->
 		<div class="row form-row">
 			<div class="col-xs-2 col-xs-offset-1"><h4>Login status: </h4></div>
 			<div class="col-xs-4 checkbox">
-				<label><input type="checkbox" checked="checked">Suspended</label>
+				<%= f.label :suspended do %>
+  					<%= f.check_box :suspended, {:class => "col-xs-4 checkbox"}, "true", "false" %>
+  					Suspended
+				<% end %>
 			</div>
 		</div>
-<!-- ------------------ -->
 
 		<!-- OK, Cancel buttons -->
 		<div class="row "> 
