Fix password change accepting wrong current password

--- a/app/views/layouts/_profile_admin_version.html.erb
+++ b/app/views/layouts/_profile_admin_version.html.erb
@@ -2,8 +2,9 @@
 <%= form_for(@teacher) do |f| %>
 <div class="col-xs-11"><h4><%= notice %></h4></div>
 <% if @teacher.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
+  <div class="col-xs-11">
+    <h4><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h4>
+    <br>
     <ul>
       <% @teacher.errors.full_messages.each do |message| %>
         <li><%= message %></li>
