--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -14,22 +14,13 @@
 <%= form_for(@teacher) do |f| %>
 
 	<!-- Error display -->
-  <% if @teacher.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-      <ul>
-      <% @teacher.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'layouts/flash' %>
 	
 	<!-- Existing password -->
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Current Password: </h4></div>
 		<div class="col-sm-4 col-sm-offset-0">
-			<%= f.password_field :old_password, class: 'form-control', id: 'currPass' %>
+			<%= f.password_field :current_password, class: 'form-control', id: 'currPass' %>
 		</div>
 	</div>
 	
