--- a/app/views/layouts/_profile_teacher_version.html.erb
+++ b/app/views/layouts/_profile_teacher_version.html.erb
@@ -4,8 +4,9 @@
 <div class="col-xs-11"><h4><%= notice %></h4></div>
 <% if @teacher.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-    <ul>
+    <h4 class="col-xs-12"><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h4>
+    <br>
+    <ul class="col-xs-12">
       <% @teacher.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
