--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -101,6 +101,27 @@ body
 	transform:scale(1.1);
 }
 
+/*Big square used on home and session screen*/
+.sq-about
+{
+	height: 10em;
+	width: 10em;
+	display: flex;
+	flex-flow:column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 30px;
+	
+	transition: all .2s ease-in-out;
+}
+.sq-about:hover
+{
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform:scale(1.1);
+	transform:scale(1.1);
+}
+
 /*Special square used by session screen*/
 .sq-studSesh
 {
