--- a/app/views/layouts/_navbar2.html.erb
+++ b/app/views/layouts/_navbar2.html.erb
@@ -11,7 +11,7 @@
 			</div>
         	<div id="navbar" class="collapse navbar-right navbar-collapse">
 		    	<ul class="nav navbar-nav ">
-		    		<li><a href="about1.html"><span class="fa fa-info-circle fa-fw"></span> About</a></li>
+		    		<li><%= link_to about_path do %><span class="fa fa-info-circle fa-fw"></span> About<% end %></li>
 				</ul>
 			</div><!-- end nav-collapse -->
 		</div><!-- end container -->
