--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -1,3 +1,4 @@
+<!--Authors: Debra J & Carolyn C -->
 <!-- note from Carolyn C: This should make it nav3 if not logged in, nav1 if you are. Should solve double screen issue.-->
 <% if logged_in? %>
 
@@ -14,10 +15,10 @@
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>About<small> - information, authors and acknowledgements</small></h2><!-- Dynamically fills in with school id -->
+				<h2>About<small> - meet the GeoGem team</small></h2>
 			</div>
 			<div class="col-xs-1 center-block">
-				<div class="header-sq i-gray" title="All about Dinner Out">
+				<div class="header-sq i-gray" title="All about GeoGem">
 					<span class="fa fa-info fa-3x teacher-icon"></span>
 				</div>
 			</div>
@@ -27,8 +28,8 @@
 		<div class="row content-text">
 			<div class="col-xs-12">
 				<p>
-					<!--Part 1: Describe Dinner Out. What it does. And how it was created.-->
-					Dinner Out is a web application designed to make behavior tracking easier for teachers and aides. 
+					<!--Part 1: Describe GeoGem. What it does. And how it was created.-->
+					GeoGem is a web application designed to make behavior tracking easier for teachers and aides. 
 					Easily enter behavior data in real time at the press of a button and generate reports quickly.
 					We make tracking and analytics easier so you can focus on what's important, your students. 
 				</p>
@@ -45,14 +46,156 @@
 		</div>
 		<div class="row content-text">
 			<div class="col-xs-12">
+				<h3>Meet the Team</h3>
 				<p>
-					<!--Part 3: Authors. Dinner Out is the creation of... Capstone2017 student profiles. (smile)-->
-					Dinner Out is the creation of the 2017 Computer Science Capstone class at <a href="northcentralcollege.edu">North Central College</a>. 
+					<!--Part 3: Authors. GeoGem is the creation of... Capstone2017 student profiles. (smile)-->
+					GeoGem is the creation of the 2017 Computer Science Capstone class at <a href="northcentralcollege.edu">North Central College</a>. 
+					The Capstone course was led by Professor Bill and was comprised of 17 students. 
 				</p>
 			</div>
 		</div>
+		<!------------------------------------ Team Images ------------------------------------>
+		<div class="row">
+			<div class="col-sm-3">
+				<!---- Prof Bill ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Prof Bill" 
+						data-text="A fun project with a great group of owners and teammates. Huzzah! thanks... yow, bill" 
+						data-img="<%=asset_path("profbill.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("profbill.jpg") %>); background-size: cover;"></div>
+					<p>Prof Bill</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+			<!---- Carolyn C ---->
+			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Carolyn C" 
+						data-text="I worked on the UX team creating specific and maintaining html views while merging them with rails code. 
+						This was my first major programming application I worked on, and was also my favorite thus far." 
+						data-img="<%=asset_path("carolync.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("carolync.png") %>); background-size: cover;"></div>
+					<p>Carolyn C.</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+				<!---- Steven R ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven R" 
+						data-text="It was quite an exciting adventure creating GeoGem! I had a good time 
+						working with some awesome people. Don't let the suit fool you...I'm not that important." 
+						data-img="<%=asset_path("stevenr.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("stevenr.jpg") %>); background-size: cover;"></div>
+					<p>Steven R.</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+			<!---- Robert H ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Robert H" data-text="I worked on the administrator and super-user portions of GeoGem. 
+						The process of creating a usable app as part of a large group proved challenging, but very rewarding. 
+						I hope GeoGem allows people to be more productive while helping others!" 
+						data-img="<%=asset_path("roberth.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("roberth.png") %>); background-size: cover;"></div>
+					<p>Robert H.</p>
+				</div>
+			</div><!-- End Col-->
+		</div><!--End 1st Row-->
+		<div class="row">
+			<div class="col-sm-3">
+				<!---- Kevin M ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Kevin M." 
+						data-text=" I worked on teacher-focused pages with Tommy B! This was the first major thing I've worked on, and it was pretty fun. 
+						I'm a vampire, so I don't have a real picture." 
+						data-img="<%=asset_path("kevinm.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("kevinm.png") %>); background-size: cover;"></div>
+					<p>Kevin M.</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+			<!---- Michael L---->
+			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Michael L." 
+						data-text="I survived capstone and had a great time learning all the tools necessary to complete this project. 
+						It was a great opportunity to create something those in education can use to make their lives just a bit easier." 
+						data-img="<%=asset_path("michaell.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("michaell.jpg") %>); background-size: cover;"></div>
+					<p>Michael L.</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+				<!---- Megan M ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Meagan M." 
+						data-text="As a member of the login team, I helped develop login and guarding the application. 
+						I had a great experience working with such an amazing development team. I'm looking forward to all the help GeoGem will provide!" 
+						data-img="<%=asset_path("meaganm.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("meaganm.jpg") %>); background-size: cover;"></div>
+					<p>Megan M.</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+			<!---- Tommy B ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Tommy B" data-text="I had a great time working with Kevin M. on the teacher-focused pages and trying to keep up with him! 
+						It was a great experience working with everyone from 0 to a full, deployed application in only a few weeks!" 
+						data-img="<%=asset_path("tommyb.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("tommyb.jpg") %>); background-size: cover;"></div>
+					<p>Tommy B.</p>
+				</div>
+			</div><!-- End Col-->
+		</div><!--End 2nd Row-->
+			<div class="row">
+			<div class="col-sm-3">
+				<!---- Ricky P ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Ricky P." 
+						data-text="Capstone was a great experience for me as a programmer. It showed me both the fun 
+						and the struggles that come along with working with a team for a project. 
+						I'm sure I'll look back on this project with fond memories of the people I worked with." 
+						data-img="<%=asset_path("rickyp.jpeg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("rickyp.jpeg") %>); background-size: cover;"></div>
+					<p>Ricky P.</p>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-sm-3">
+			<!---- Steven Y---->
+			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven Y." 
+						data-text="I had a great time in capstone. I look forward to putting my capstone experience towards a career." 
+						data-img="<%=asset_path("steveny.JPG") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("steveny.JPG") %>); background-size: cover;"></div>
+					<p>Steven Y.</p>.</p>
+				</div>
+			</div><!-- End Col-->
+		
+		</div><!--End 3rd Row-->
 	</div> <!--content col-->
 </div> <!-- end container -->	
 
+<!-- Bio Modal -->
+<div class="modal fade" id="bio" tabindex="-1">
+  <div class="modal-dialog modal-lg" style="vertical-align: middle;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h2 class="modal-title" id="modalTitle"><!--Name of Person--></h2>
+      </div><!--End header-->
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-8" id="aboutText"><!--Person's bio--></div>
+            <div class="col-sm-3"><img id="bioModalImg" class="img-responsive" alt="" src=""></div>
+          </div>
+        </div>
+      </div><!--End body-->
+    </div>
+  </div>
+</div>
 
-
+<script>
+	$('#bio').on('show.bs.modal', function (event) {
+  var button = $(event.relatedTarget) // Div that was clicked
+  // Extract info from data-* attributes
+  var name = button.data('name') 
+  var text = button.data('text')
+  var img = button.data('img')
+  var modal = $(this)
+  modal.find('.modal-title').text(name) //set modal title
+  modal.find('.modal-body #aboutText').text(text) //set body text
+  modal.find('.modal-body #bioModalImg').attr('src', img) //set image
+  modal.find('.modal-body #bioModalImg').attr('alt', name) //set alt to name
+})
+</script>
