--- a/app/views/layouts/_profile_admin_version.html.erb
+++ b/app/views/layouts/_profile_admin_version.html.erb
@@ -17,7 +17,7 @@
 <div class="row form-row">
 	<div class="col-sm-2 col-sm-offset-1"><h4>Username: </h4></div>
 	<div class="col-sm-2">
-		<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
+		<%= f.text_field :user_name, class: 'form-control', id: 'teacherID', :readonly => true %>
 	</div>
 </div>
 
@@ -25,7 +25,7 @@
 <div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
 	<div class="col-xs-4 col-xs-offset-1">
-		<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
+		<%= f.text_field :full_name, class: 'form-control', id: 'teacherName', :readonly => true %>
 	</div>
 </div>
 
@@ -33,7 +33,7 @@
 <div class="row form-row">
 	<div class="col-xs-1 col-xs-offset-1"><h4>Teacher ID: </h4></div>
 	<div class="col-xs-4 col-xs-offset-1">
-		<%= f.text_field :screen_name, class: 'form-control'%>
+		<%= f.text_field :screen_name, class: 'form-control', :readonly => true %>
 	</div>
 </div>  
 
