Fix formatting of change password settings on teacher login settings page

--- a/app/views/teachers/login_settings.html.erb
+++ b/app/views/teachers/login_settings.html.erb
@@ -81,13 +81,16 @@
 <hr width="80%">
 <div class="form-spacer">	&nbsp;</div>
 
+
+		
+		
 <!-- Change Password form -->
 <%= form_for(@teacher) do |f| %>
 	<form class="form-horizontal">
 		
 		<!-- new password -->
 	  <div class="row form-row">
-		  <label class="control-label col-sm-3" for="newPass"><h4>New Password:</h4></label>
+		  <label class="col-xs-2 col-xs-offset-1" for="newPass"><h4>New Password:</h4></label>
 			<div class="col-sm-4"> 
 			  <%= f.password_field :password, class: 'form-control', id: 'newPass' %>
 			</div>
@@ -95,7 +98,7 @@
 		
 		<!-- confirm new password -->
 	  <div class="row form-row">
-		  <label class="control-label col-sm-3" for="confPass"><h4>Confirm New Password:</h4></label>
+		  <label class="col-xs-2 col-xs-offset-1" for="confPass"><h4>Confirm New Password:</h4></label>
 			<div class="col-sm-4"> 
 			  <%= f.password_field :password_confirmation, class: 'form-control', id: 'confPass' %>
 			</div>
