--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -37,6 +37,7 @@
 		</div>
 		<div class="row content-text">
 			<div class="col-xs-12">
+				<h3>Contributions</h3>
 				<p>
 					<!--Part 2: Thank you Turning Pointe and others. -->
 					We would like to extend our thanks to <a href="http://www.turningpointeautismfoundation.org/" target="_blank">Turning Pointe Autism Foundation</a> for providing their expertise and willingness to help
@@ -56,116 +57,132 @@
 		</div>
 		<!------------------------------------ Team Images ------------------------------------>
 		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
 				<!---- Prof Bill ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Prof Bill" 
 						data-text="A fun project with a great group of owners and teammates. Huzzah! thanks... yow, bill" 
 						data-img="<%=asset_path("profbill.jpg") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("profbill.jpg") %>); background-size: cover;"></div>
-					<p>Prof Bill</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("profbill.jpg") %>);"></div>
+					<h5>Prof Bill</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
 			<!---- Carolyn C ---->
 			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Carolyn C" 
 						data-text="I worked on the UX team creating specific and maintaining html views while merging them with rails code. 
 						This was my first major programming application I worked on, and was also my favorite thus far." 
 						data-img="<%=asset_path("carolync.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("carolync.png") %>); background-size: cover;"></div>
-					<p>Carolyn C.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("carolync.png") %>);"></div>
+					<h5>Carolyn C.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
 				<!---- Steven R ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven R" 
 						data-text="It was quite an exciting adventure creating GeoGem! I had a good time 
 						working with some awesome people. Don't let the suit fool you...I'm not that important." 
 						data-img="<%=asset_path("stevenr.jpg") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("stevenr.jpg") %>); background-size: cover;"></div>
-					<p>Steven R.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("stevenr.jpg") %>);"></div>
+					<h5>Steven R.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
 			<!---- Robert H ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
 						data-name="Robert H" data-text="I worked on the administrator and super-user portions of GeoGem. 
 						The process of creating a usable app as part of a large group proved challenging, but very rewarding. 
 						I hope GeoGem allows people to be more productive while helping others!" 
 						data-img="<%=asset_path("roberth.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("roberth.png") %>); background-size: cover;"></div>
-					<p>Robert H.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("roberth.png") %>);"></div>
+					<h5>Robert H.</h5>
 				</div>
 			</div><!-- End Col-->
-		</div><!--End 1st Row-->
-		<div class="row">
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
 				<!---- Kevin M ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Kevin M." 
 						data-text=" I worked on teacher-focused pages with Tommy B! This was the first major thing I've worked on, and it was pretty fun. 
 						I'm a vampire, so I don't have a real picture." 
 						data-img="<%=asset_path("kevinm.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("kevinm.png") %>); background-size: cover;"></div>
-					<p>Kevin M.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("kevinm.png") %>);"></div>
+					<h5>Kevin M.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
-			<!---- Michael L---->
-			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Michael L." 
+			<div class="col-xs-4 col-sm-3">
+				<!---- Michael L---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Michael L." 
 						data-text="I survived capstone and had a great time learning all the tools necessary to complete this project. 
 						It was a great opportunity to create something those in education can use to make their lives just a bit easier." 
 						data-img="<%=asset_path("michaell.jpg") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("michaell.jpg") %>); background-size: cover;"></div>
-					<p>Michael L.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("michaell.jpg") %>);"></div>
+					<h5>Michael L.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
+				<!---- Debra J ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Debra J." 
+						data-text="I headed up the demo team and worked on the UX team in order to establish the look and feel of GeoGem. 
+						I also aided the creation of the home and session screens. I enjoyed working on a project that will have a real
+						community impact and I hope that our users will enjoy using this system!" 
+						data-img="<%=asset_path("debraj.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("debraj.jpg") %>);"></div>
+					<h5>Debra J.</h5>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-xs-4 col-sm-3">
+				<!---- Steven Y---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven Y." 
+						data-text="I had a great time in capstone. I look forward to putting my capstone experience towards a career." 
+						data-img="<%=asset_path("steveny.JPG") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("steveny.JPG") %>);"></div>
+					<h5>Steven Y.</h5>
+				</div>
+			</div><!-- End Col-->
+			<div class="col-xs-4 col-sm-3">
 				<!---- Megan M ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Meagan M." 
 						data-text="As a member of the login team, I helped develop login and guarding the application. 
 						I had a great experience working with such an amazing development team. I'm looking forward to all the help GeoGem will provide!" 
 						data-img="<%=asset_path("meaganm.jpg") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("meaganm.jpg") %>); background-size: cover;"></div>
-					<p>Megan M.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("meaganm.jpg") %>);"></div>
+					<h5>Megan M.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
-			<!---- Tommy B ---->
-				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Tommy B" data-text="I had a great time working with Kevin M. on the teacher-focused pages and trying to keep up with him! 
-						It was a great experience working with everyone from 0 to a full, deployed application in only a few weeks!" 
-						data-img="<%=asset_path("tommyb.jpg") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("tommyb.jpg") %>); background-size: cover;"></div>
-					<p>Tommy B.</p>
-				</div>
-			</div><!-- End Col-->
-		</div><!--End 2nd Row-->
-			<div class="row">
-			<div class="col-sm-3">
+			<div class="col-xs-4 col-sm-3">
 				<!---- Ricky P ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Ricky P." 
 						data-text="Capstone was a great experience for me as a programmer. It showed me both the fun 
 						and the struggles that come along with working with a team for a project. 
 						I'm sure I'll look back on this project with fond memories of the people I worked with." 
 						data-img="<%=asset_path("rickyp.jpeg") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("rickyp.jpeg") %>); background-size: cover;"></div>
-					<p>Ricky P.</p>
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("rickyp.jpeg") %>);"></div>
+					<h5>Ricky P.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-sm-3">
-			<!---- Steven Y---->
-			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven Y." 
-						data-text="I had a great time in capstone. I look forward to putting my capstone experience towards a career." 
-						data-img="<%=asset_path("steveny.JPG") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("steveny.JPG") %>); background-size: cover;"></div>
-					<p>Steven Y.</p>.</p>
+		<div class="col-xs-4 col-sm-3">
+			<!---- Tommy B ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Tommy B." data-text="I had a great time working with Kevin M. on the teacher-focused pages and trying to keep up with him! 
+						It was a great experience working with everyone from 0 to a full, deployed application in only a few weeks!" 
+						data-img="<%=asset_path("tommyb.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("tommyb.jpg") %>);"></div>
+					<h5>Tommy B.</h5>
 				</div>
 			</div><!-- End Col-->
-		
-		</div><!--End 3rd Row-->
+			<div class="col-xs-4 col-sm-3">
+				<!---- Taylor S ---->
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Taylor S." data-text="I had a great time in Capstone working with everyone on GeoGem. 
+						I handled coding the session summary reports, and it was a very fun and rewarding experience!" 
+						data-img="<%=asset_path("taylors.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("taylors.jpg") %>);"></div>
+					<h5>Taylor S.</h5>
+				</div>
+			</div><!-- End Col-->
+		</div><!--End Row-->
 	</div> <!--content col-->
 </div> <!-- end container -->	
 
-<!-- Bio Modal -->
+<!------- Bio Modal: Pops up on click of picture ------->
 <div class="modal fade" id="bio" tabindex="-1">
   <div class="modal-dialog modal-lg" style="vertical-align: middle;">
     <div class="modal-content">
@@ -186,6 +203,12 @@
 </div>
 
 <script>
+/*****************************************************************************
+ * Author Debra J
+ * Handles data population of the modal on click
+ * by using the data attribution tags of each div
+ * Reference here:http://getbootstrap.com/javascript/#modals-related-target
+ ****************************************************************************/
 	$('#bio').on('show.bs.modal', function (event) {
   var button = $(event.relatedTarget) // Div that was clicked
   // Extract info from data-* attributes
