--- a/app/views/login_session/new.html.erb
+++ b/app/views/login_session/new.html.erb
@@ -6,9 +6,7 @@
 
 			<!--        Logo added by Kevin Morgan          -->
     	<h1 class="login-header-text">
-    		<%= image_tag("logos/smallgem.png", :alt => "geogem logo") %> 
-    		<br>
-    		GeoGem
+    		<%= image_tag("logos/smallgem.png", :alt => "geogem logo") %> GeoGem
     	</h1>
 			<br>
 			
