Edited some modal things, added photo placeholders

--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -57,8 +57,8 @@
 		</div>
 		<!------------------------------------ Team Images ------------------------------------>
 		<div class="row">
+			<!---- Prof Bill ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Prof Bill ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Prof Bill" 
 						data-text="A fun project with a great group of owners and teammates. Huzzah! thanks... yow, bill" 
 						data-img="<%=asset_path("profbill.jpg") %>">		
@@ -66,8 +66,8 @@
 					<h5>Prof Bill</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-xs-4 col-sm-3">
 			<!---- Carolyn C ---->
+			<div class="col-xs-4 col-sm-3">
 			<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Carolyn C" 
 						data-text="I worked on the UX team creating specific and maintaining html views while merging them with rails code. 
 						This was my first major programming application I worked on, and was also my favorite thus far." 
@@ -76,8 +76,8 @@
 					<h5>Carolyn C.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Steven R ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Steven R ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven R" 
 						data-text="It was quite an exciting adventure creating GeoGem! I had a good time 
 						working with some awesome people. Don't let the suit fool you...I'm not that important." 
@@ -86,8 +86,8 @@
 					<h5>Steven R.</h5>
 				</div>
 			</div><!-- End Col-->
-			<div class="col-xs-4 col-sm-3">
 			<!---- Robert H ---->
+			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
 						data-name="Robert H" data-text="I worked on the administrator and super-user portions of GeoGem. 
 						The process of creating a usable app as part of a large group proved challenging, but very rewarding. 
@@ -97,8 +97,8 @@
 					<h5>Robert H.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Kevin M ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Kevin M ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Kevin M." 
 						data-text=" I worked on teacher-focused pages with Tommy B! This was the first major thing I've worked on, and it was pretty fun. 
 						I'm a vampire, so I don't have a real picture." 
@@ -107,8 +107,8 @@
 					<h5>Kevin M.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Michael L---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Michael L---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Michael L." 
 						data-text="I survived capstone and had a great time learning all the tools necessary to complete this project. 
 						It was a great opportunity to create something those in education can use to make their lives just a bit easier." 
@@ -117,8 +117,8 @@
 					<h5>Michael L.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Debra J ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Debra J ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Debra J." 
 						data-text="I headed up the demo team and worked on the UX team in order to establish the look and feel of GeoGem. 
 						I also aided the creation of the home and session screens. I enjoyed working on a project that will have a real
@@ -128,8 +128,8 @@
 					<h5>Debra J.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Steven Y---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Steven Y---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Steven Y." 
 						data-text="I had a great time in capstone. I look forward to putting my capstone experience towards a career." 
 						data-img="<%=asset_path("steveny.JPG") %>">		
@@ -137,8 +137,8 @@
 					<h5>Steven Y.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Megan M ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Megan M ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Meagan M." 
 						data-text="As a member of the login team, I helped develop login and guarding the application. 
 						I had a great experience working with such an amazing development team. I'm looking forward to all the help GeoGem will provide!" 
@@ -147,8 +147,8 @@
 					<h5>Megan M.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Ricky P ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Ricky P ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" data-name="Ricky P." 
 						data-text="Capstone was a great experience for me as a programmer. It showed me both the fun 
 						and the struggles that come along with working with a team for a project. 
@@ -158,8 +158,8 @@
 					<h5>Ricky P.</h5>
 				</div>
 			</div><!-- End Col-->
-		<div class="col-xs-4 col-sm-3">
 			<!---- Tommy B ---->
+			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
 						data-name="Tommy B." data-text="I had a great time working with Kevin M. on the teacher-focused pages and trying to keep up with him! 
 						It was a great experience working with everyone from 0 to a full, deployed application in only a few weeks!" 
@@ -168,14 +168,68 @@
 					<h5>Tommy B.</h5>
 				</div>
 			</div><!-- End Col-->
+			<!---- Taylor S ---->
 			<div class="col-xs-4 col-sm-3">
-				<!---- Taylor S ---->
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
 						data-name="Taylor S." data-text="I had a great time in Capstone working with everyone on GeoGem. 
 						I handled coding the session summary reports, and it was a very fun and rewarding experience!" 
 						data-img="<%=asset_path("taylors.jpg") %>">		
 					<div class="sq-about center-block" style="background-image: url(<%=asset_path("taylors.jpg") %>);"></div>
 					<h5>Taylor S.</h5>
+				</div>
+			</div><!-- End Col-->
+			<!---- Alex P. ---->
+			<div class="col-xs-4 col-sm-3">
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Alex P." data-text="..." 
+						data-img="<%=asset_path("avatar.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+					<h5>Alex P.</h5>
+				</div>
+			</div><!-- End Col-->
+			<!---- Matthew O. ---->
+			<div class="col-xs-4 col-sm-3">
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Matthew O." data-text="..." 
+						data-img="<%=asset_path("avatar.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+					<h5>Matthew O.</h5>
+				</div>
+			</div><!-- End Col-->
+			<!---- Dakota B. ---->
+			<div class="col-xs-4 col-sm-3">
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Dakota B." data-text="..." 
+						data-img="<%=asset_path("avatar.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+					<h5>Dakota B.</h5>
+				</div>
+			</div><!-- End Col-->
+			<!---- Rolando M. ---->
+			<div class="col-xs-4 col-sm-3">
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Rolando M." data-text="..." 
+						data-img="<%=asset_path("avatar.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+					<h5>Rolando M.</h5>
+				</div>
+			</div><!-- End Col-->
+			<!---- Kevin P. ---->
+			<div class="col-xs-4 col-sm-3">
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Kevin P." data-text="..." 
+						data-img="<%=asset_path("avatar.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+					<h5>Kevin P.</h5>
+				</div>
+			</div><!-- End Col-->
+			<!---- Nate V. ---->
+			<div class="col-xs-4 col-sm-3">
+				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
+						data-name="Nate V." data-text="..." 
+						data-img="<%=asset_path("avatar.png") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+					<h5>Nate V.</h5>
 				</div>
 			</div><!-- End Col-->
 		</div><!--End Row-->
@@ -193,8 +247,8 @@
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
+          	<div class="col-sm-4"><img id="bioModalImg" class="img-responsive" alt="" src=""></div>
             <div class="col-sm-8" id="aboutText"><!--Person's bio--></div>
-            <div class="col-sm-3"><img id="bioModalImg" class="img-responsive" alt="" src=""></div>
           </div>
         </div>
       </div><!--End body-->
@@ -216,7 +270,7 @@
   var text = button.data('text')
   var img = button.data('img')
   var modal = $(this)
-  modal.find('.modal-title').text(name) //set modal title
+  modal.find('.modal-title').text("About " + name) //set modal title
   modal.find('.modal-body #aboutText').text(text) //set body text
   modal.find('.modal-body #bioModalImg').attr('src', img) //set image
   modal.find('.modal-body #bioModalImg').attr('alt', name) //set alt to name
