--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -29,8 +29,9 @@
 			<div class="col-xs-12">
 				<p>
 					<!--Part 1: Describe GeoGem. What it does. And how it was created.-->
-					GeoGem is a web application designed to make behavior tracking easier for teachers and aides. 
-					Easily enter behavior data in real time at the press of a button and generate reports quickly.
+					GeoGem is a web application designed to make tracking student behaviors easier for teachers and aides. 
+					Simply define the behavior squares you'd like to track for each student and you'll be able to track 
+					behaviors in real time at the touch of a button. Then, analyze the data to generate reports quickly.
 					We make tracking and analytics easier so you can focus on what's important, your students. 
 				</p>
 			</div>
