--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -26,7 +26,7 @@
 <!-- New Student Button -->
 <div class="row">
 	<div class="col-xs-3 col-xs-offset-1">
-		<form  action="/students/new.html">
+		<form  action="/students/new">
 			<button type="submit" class="col-sm-offset-1 btn btn-lg btn-success">
 			  <i class="fa fa-plus-square-o"></i> New Student
 			</button>
