bug fixes for super admin schools

--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -78,7 +78,7 @@
 	  <% end %>
 	</div>
 	<div class="col-sm-1 col-sm-offset-1"> 
-		<%= link_to "Cancel", schools_path, :class => "btn btn-danger" %>
+		<%= link_to "Cancel", super_path, :class => "btn btn-danger" %>
 	</div>
 </div>
 
