--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -11,11 +11,12 @@
       </ul>
     </div>
   <% end %>
+  
 
 <!-- page header -->
 	<div class="page-header vertical-align">
 		<div class="col-xs-11">
-			<h2>New School<small> - add a new school to Dinner Out</small></h2><!-- Dynamically fills in with school id -->
+			<h2>New School<small> - add a new school to GeoGem</small></h2><!-- Dynamically fills in with school id -->
 		</div>
 	<div class="col-xs-1 center-block">
 		<div class="header-sq i-gray" title="Add a new school">
