--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <head>
 	<%= csrf_meta_tags %>
 	<%= favicon_link_tag %>
-	<title>Operation Dinner Out</title>
+	<title>GeoGem</title>
     <%= render 'layouts/shim' %>
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
