--- a/app/views/schools/super.html.erb
+++ b/app/views/schools/super.html.erb
@@ -21,7 +21,7 @@
 
 		<!-- action icons -->
 		<div class="row" style="margin-top: 40px;">
-			<%= link_to schools_path(@schools) do %>	
+			<%= link_to schools_path do %>	
 			<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit schools">
 			<div class ="action-sq i-navy center-block">
 			<span class="fa fa-home fa-4x action-icon" ></span>
@@ -31,7 +31,7 @@
 			</div> <!-- col -->
 			<% end %>
 			
-			<%= link_to super_report_path(@schools) do %>
+			<%= link_to super_report_path do %>
 			<div class="col-xs-2 text-center" title="Stats++ for the Super User">
 			<div class ="action-sq i-pink center-block">
 				<span class="fa fa-file-text fa-4x action-icon"></span>
@@ -44,7 +44,7 @@
 		<!-- action icons, row 2 -->
 		<div class="row action-icon-row" style="margin-top: 40px;">
 			
-			<%= link_to backup_path(@schools) do %>
+			<%= link_to school_backup_path do %>
 			<div class="col-xs-2 col-xs-offset-1 text-center" title="Backup all data of Super's focus school">
 			<div class ="action-sq i-green center-block" >
 				<span class="fa fa-floppy-o fa-4x action-icon" ></span>
@@ -53,7 +53,7 @@
 			</div> <!-- col -->
 			<% end %>
 		
-			<%= link_to suspend_path(@schools) do %>
+			<%= link_to school_suspend_path do %>
 			<div class="col-xs-2 text-center" title="Suspend all teacher logins of Super's focus school">
 			<div class ="action-sq i-red center-block">
 				<span class="fa fa-bomb fa-4x action-icon"></span>
@@ -62,7 +62,7 @@
 			</div><!-- col -->
 			<% end %>
 			
-			<%= link_to restore_path(@schools) do %>
+			<%= link_to school_restore_path do %>
 			<div class="col-xs-2 text-center" title="Restore all teacher logins of Super's focus school">
 			<div class ="action-sq i-yellow center-block">
 				<span class="fa fa-undo fa-4x action-icon"></span>
