--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -27,7 +27,7 @@
 	<% end %>
 	
 	<!-- School stats and more -->
-	<%= link_to admin_report_path(@current_teacher) do %>
+	<%= link_to admin_report_path do %>
 	<div class="col-xs-2 text-center" title="School stats and more">
 	<div class ="action-sq i-pink center-block" >
 		<span class="fa fa-file-text-o fa-4x action-icon" ></span>
@@ -42,7 +42,7 @@
 <div class="row action-icon-row">
 	
 	<!-- View/edit all students -->
-	<%= link_to students_path(@current_teacher) do %>
+	<%= link_to students_path do %>
 	<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit all students">
 	<div class ="action-sq i-red center-block" >
 		<span class="fa fa-child fa-4x action-icon" ></span>
@@ -52,7 +52,7 @@
 	<% end %>
 	
 	<!-- View/edit all teachers -->
-	<%= link_to teachers_path(@current_teacher) do %>
+	<%= link_to teachers_path do %>
 	<div class="col-xs-2 text-center" title="View/edit all teachers">
 	<div class ="action-sq i-yellow center-block" >
 		<span class="fa fa-apple fa-4x action-icon" ></span>
@@ -62,7 +62,7 @@
 	<% end %>
 	
 	<!-- View/edit all behavior squares-->
-	<%= link_to squares_path(@current_teacher) do %>
+	<%= link_to squares_path do %>
 	<div class="col-xs-2 text-center" title="View/edit all behavior squares">
 	<div class ="action-sq i-ltblue center-block" >
 		<span class="fa fa-square-o fa-4x action-icon" ></span>
