--- a/app/views/teachers/admin_report.html.erb
+++ b/app/views/teachers/admin_report.html.erb
@@ -83,7 +83,7 @@
 		   				<th>Square Icon</th>
 						<th>Square ID</th>
 						<th>Square Name</th>
-						<th>Tracking Type</th>
+						<th>Type</th>
 						<th>Description</th>
 					</tr>
 				</thead>
@@ -97,7 +97,15 @@
 								</td>	
 								<td><p class="listText"><span> <%= square.screen_name %></span> </p></td>
 							    <td><p class="listText"><span> <%= square.full_name %></span> </p></td>
-							    <td><p class="listText"><span> <%= square.tracking_type %></span> </p></td>
+							    <!-- If statement for translating  square type int into string KM-->
+							    <td><% if square.tracking_type == 1 %>
+							        <p class="listText">Duration</p>
+							        <% elsif square.tracking_type == 2 %>
+							        <p class="listText">Frequency</p>
+							        <% else %>
+							        <p class="listText">Interval</p>
+							        <% end %>
+							    </td>
 							    <td><p class="listText"><span> <%= square.description %></span> </p></td>
 		  		      		</tr>
 			  		    <% end %>
