--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -313,7 +313,7 @@ body
 	color: white;
 }
 .squares-row {
-	padding-bottom: 60px;
+	padding: 20px;
 }
 .add-rm-squares-row {
 	padding-bottom: 20px;
