--- a/app/views/roster_squares/_form.html.erb
+++ b/app/views/roster_squares/_form.html.erb
@@ -23,7 +23,12 @@
 		</div>
   	<div class="form-group col-xs-2">
   	    <!-- Populates drop down for add box-->
-        <%= f.select :square_id, options_for_select(@squares.map {|squares| ["#{squares.screen_name } - #{squares.full_name }", squares.id, {'data-id'=>squares.id}] }), class: "form-control", id: "addStud"%>
+  	    
+  	    		<!-- Loops through checking which squares the student has in the roster of squares-->
+    			 <% @school_squares.each do |square| %>
+    			     <% isSquare = is_student_square(square) %>
+    			<%end%>
+        	 <%= f.select :square_id, options_for_select(@not_student_squares.map {|squares| ["#{squares.screen_name } - #{squares.full_name }", squares.id, {'data-id'=>squares.id}] }), class: "form-control", id: "addStud"%>
         <!-- This the id for the student it's just hidden-->
         <%= f.hidden_field :student_id, :value => @students.id%>
   	</div>
