--- a/app/views/roster_squares/edit.html.erb
+++ b/app/views/roster_squares/edit.html.erb
@@ -15,20 +15,21 @@
 					<h2>Student Squares<small> - behavior squares for student <%= @students.screen_name %></small></h2><!-- Dynamically fills in with school id -->
 				</div>
 				<div class="col-xs-1 center-block">
-					<div class="header-sq i-<%= @students.color %>" title="Jimmy">
-						<span class="fa fa-<%= @students.icon %> fa-3x teacher-icon"></span>
+					<div class="header-sq i-<%= @students.color %>" title="<%=@students.screen_name%>">
+						<a href="<%= edit_student_path(@students)%>"><span class="fa fa-<%= @students.icon %> fa-3x teacher-icon"></span></a>
 					</div>
 				</div>
 			</div><!--End page header-->
 				<!-- student behavior Squares -->
 				<div class="row squares-row first-content-row">
+					<!--Link to possible solution: https://stackoverflow.com/questions/14528919/new-row-every-3-items -->
 					<!-- set the squares for the specific student-->
-				    <%@roster_squares.each do |roster_square|%>
+				    <%@roster_squares.each do |roster_square, index|%>
 					    <% if roster_square.student_id == @students.id %>
 					      <% square_name = set_square_name(roster_square) %>
 					    	<% square_color = set_square_color(roster_square) %>
 					    	<% square_id = set_square_id(roster_square) %>
-						   	<div class="col-xs-2">
+						   	<div class="squares-row col-xs-3">
 								<div class="square i-<%= square_color %> text-center">
 									<div class="col-xs-12">
 										<p><a href="/squares/<%=square_id%>/edit"><span><h4><%=square_name%></h4></span></a></p>		   		
@@ -41,28 +42,3 @@
 	
 			<!-- Calls the edit from which is the add squares select and the submit button-->
 			<%= render 'form', roster_square: @roster_square %>
-	
-			<!-- remove square row-->
-			<div class="row vertical-align add-rm-squares-row">
-				<div class="col-xs-1 col-xs-offset-1 text-right">
-					<span class="fa fa-minus" style="color: red;"></span>
-				</div>
-				<div class="col-xs-2 text-left">
-					<label for="removeSquare"><h4>Remove Square: </h4></label>
-				</div>
-				<div class="form-group col-xs-2">
-					<select class="form-control" id="addStud">
-						<!-- Loops through checking which squares the student has in the roster of squares-->
-						<% @student_squares.each do |student_squares| %>
-						<!-- Called helper methods-->
-						<% current_square_screen_name = set_square_name(student_squares) %>
-						<% current_square_full_name = set_square_desc(student_squares) %>
-						<% current_square_id = set_square_id(student_squares) %>
-						<option><%= current_square_screen_name %> - <%= current_square_full_name %></option>
-					<%end%>
-					</select>
-				</div>
-				<div class="col-xs-2 text-center">
-					<button type="submit" class="btn btn-danger">Remove Square</button>
-				</div>
-			</div><!--End row -->
