reordered about page. Changed all lavendar classes to be lavender with an e. This should fix any css styling issues.

--- a/app/views/squares/_form.html.erb
+++ b/app/views/squares/_form.html.erb
@@ -44,7 +44,7 @@
 		</div>
 		<div class="col-sm-4 col-md-offset-0 col-sm-offset-0">
       <%= f.select :color,  ['navy','red','yellow',
-      ['light blue', 'ltblue'],'orange','green','lavendar','plum','mint','pink']%>
+      ['light blue', 'ltblue'],'orange','green','lavender','plum','mint','pink']%>
 		</div>
 	</div>
 
