--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -52,7 +52,7 @@
 		  <h4>Color: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
       <%= f.select :color, ['navy','red','yellow',
-      ['light blue', 'ltblue'],['light orange','ltorange'],'green','lavendar','plum','mint','pink',
+      ['light blue', 'ltblue'],['light orange','ltorange'],'green','lavender','plum','mint','pink',
       ['dark orange','dkorange']]%>
 		</div>
 	</div>
