--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -45,7 +45,7 @@
 		  <h4>Color: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
       <%= f.select :color, ['navy','red','yellow',
-      ['light blue', 'ltblue'],'orange','green','lavendar','plum','mint','pink']%>
+      ['light blue', 'ltblue'],'orange','green','lavender','plum','mint','pink']%>
 		</div>
 	</div>
 
