add debug display

--- a/app/views/graph/example.html.erb
+++ b/app/views/graph/example.html.erb
@@ -3,7 +3,9 @@
 <%= @testSes = Session.create!() %>
 <%= @testEve = SessionEvent.create!(session_id:@testSes.id) %>
 <%= @sesh1Events = SessionEvent.where(session_id:1) %>
-
+<%= SessionEvent.where(session_id:1) %>
+<%=debug(@sesh1Events)%>
+<%=debug(@testSes)%>
 <%= line_chart @sesh1Events.where(behavior_square_id:2).group_by_minute(:square_press_time).count %>
 <%= bar_chart @sesh1Events.group(:behavior_square_id).count %>
 
