--- a/app/views/teachers/edit_password.html.erb
+++ b/app/views/teachers/edit_password.html.erb
@@ -12,9 +12,18 @@
 <div class="row">
 	<div class="col-sm-10 col-sm-offset-1">
 <%= form_for(@teacher) do |f| %>
-
-	<!-- Error display -->
-  <%= render 'layouts/flash' %>
+  <% if @teacher.errors.any? %>
+    <div id="error_explanation">
+      <div class="alert alert-danger">
+      <%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:
+      </div>
+      <ul>
+      <% @teacher.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 	
 	<!-- Existing password -->
 	<div class="row form-row">
