--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -8,10 +8,11 @@
 
 <!-- Teacher profile area -->
 <%= form_for(@teacher) do |f| %>
-
   <% if @teacher.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
+      <div class="alert alert-danger">
+      <%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:
+      </div>
       <ul>
       <% @teacher.errors.full_messages.each do |message| %>
         <li><%= message %></li>
