--- a/app/views/roster_squares/edit.html.erb
+++ b/app/views/roster_squares/edit.html.erb
@@ -30,11 +30,11 @@
 					    	<% square_color = set_square_color(roster_square) %>
 					    	<% square_id = set_square_id(roster_square) %>
 						   	<div class="squares-row col-xs-3">
-								<div class="square i-<%= square_color %> text-center">
+								<a href="/squares/<%=square_id%>/edit"><div class="square i-<%= square_color %> text-center">
 									<div class="col-xs-12">
-										<p><a href="/squares/<%=square_id%>/edit"><span><h4><%=square_name%></h4></span></a></p>		   		
+										<p><span><h4><%=square_name%></h4></span></p>		   		
 									</div>
-								</div><!--End Square-->
+								</div><!--End Square--></a>
 							</div><!--End Col -->
 						<%end%>
 					<%end%>
@@ -42,3 +42,19 @@
 	
 			<!-- Calls the edit from which is the add squares select and the submit button-->
 			<%= render 'form', roster_square: @roster_square %>
+			
+						<!-- remove square row-->
+			<div class="row vertical-align add-rm-squares-row">
+				<div class="col-xs-1 col-xs-offset-1 text-right">
+					<span class="fa fa-minus" style="color: red;"></span>
+				</div>
+				<div class="col-xs-2 text-left">
+					<label for="removeSquare"><h4>Remove Square: </h4></label>
+				</div>
+				<div class="form-group col-xs-2">
+        			 <%= select_tag 'remove_square_id', options_for_select(@student_squares.map {|student_square| ["#{set_square_name(student_square)} - #{set_square_desc(student_square) }", student_square.id] }), class: "form-control", id: "removeStud", params: "remove_square_id"%>
+				</div>
+				<div class="col-xs-2 text-center">
+					<%= button_tag(type: 'submit', class: "btn btn-danger", id: "addStudBtn", name: "remove_square") do %> <i class="fa fa-minus icon-white"></i> <% end %>
+				</div>
+			</div><!--End row -->
